# SnakeGame

./: README.md  pyproject.toml
src/: game.py  main.py  objects.py
