[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SnakeGame"
version = "1.0.0"
description = "Snake Game in Python"
authors = [{name = "Mikołaj Nadra", email = "m.nadra@proton.me"}] 
readme = "README.md"
dependencies = [
    "pygame = ^2.6.0"
]
